feat: add project logo to intro image
Related to #156.

Due to the goals of this project, we decided not to merge the PR and
improve upon the idea by using a logo that uses theme colors. It works
really well and looks far better than what we currently have.

Huge thanks to @jdruedaq for contributing and for the initial idea!

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -243,6 +243,8 @@
     inner   = inset outer;
     i       = !important;
     vendors = official;
+    svg_bg  = 0;
+    svg_ac  = 0;
 
     // Color mixin.
     /// All colors: `c: fg bd bg;`
@@ -260,8 +262,24 @@
         if x is a 'call' or x is a 'rgba' {   fill: xi is 0? x : x i }
         if y is a 'call' or y is a 'rgba' { stroke: yi is 0? y : y i }
     }
+    // Convert to SVG-friendly colors.
+    to_svg(input) {
+        s('\%23%s', unquote(substr(s('%s', input), 1, 6)));
+    }
     // Rounded corners.
     rad() { border-radius: arguments }
+
+    /// Theme colors for intro image.
+    if ( theme == 'old' ) {
+        svg_bg = to_svg(#1f232a);
+        svg_ac = to_svg(#7289da);
+    } else if ( theme == 'new' ) {
+        svg_bg = to_svg(#292929);
+        svg_ac = to_svg(#bf692b);
+    } else {
+        svg_bg = to_svg(dark);
+        svg_ac = to_svg(accent);
+    }
 
     /// Typing indicator animation.
     @keyframes pulse {
@@ -404,12 +422,13 @@
                 div { c: cm }
             }
             /// Reset default image.
-            [data-asset-intro-image] {
-                rad: 50%;
+            /[data-asset-intro-image] {
+                rad: 0 i;
                 max-width: 200px;
                 max-height: 200px;
-                filter: opacity(0.75);
                 transition: opacity 0.6s ease;
+                img = s("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' height='256' width='256'><g stroke='%s'><path d='M128.4901 30.8659a95.4375 95.4375 0 00-95.4375 95.4375 95.4375 95.4375 0 0014.168 50.0332L35.6698 221.276l44.7989-12.498a95.4375 95.4375 0 0048.0214 12.9629 95.4375 95.4375 0 0095.4375-95.4375 95.4375 95.4375 0 00-95.4375-95.4375z' fill='%s' fill-rule='evenodd' stroke-width='18' stroke-linecap='square'/><path d='M97.8104 79.8463c-4.9671.0406-13.5028 2.0796-17.7812 14.8946-6.8318 20.4631 12.5737 43.3028 27.2438 57.4735 14.7975 14.2938 43.1559 26.507 58.0098 21.08 20.5566-8.9065 15.2475-22.9479 15.2475-22.9479l-22.9727-11.0878s-2.062-1.206-3.4146.5737c-1.0042 1.3213-9.4409 11.3755-9.4409 11.3755s-1.449 1.668-3.827.7402c-5.7574-2.2462-14.2018-7.4856-18.5314-10.7795-6.8875-5.2399-12.957-13.0846-16.9473-19.668-1.2556-2.5597.6953-4.709.6953-4.709s6.0303-8.2629 7.0176-9.5566c1.0068-1.3194.2539-3.3633.2539-3.3633l-10.539-23.2285s-2.0334-.8212-5.0138-.7969z' fill='%s' stroke-linejoin='round'/></g></svg>", svg_ac, svg_bg, svg_ac);
+                background-image: url(img) i;
             }
             /// Userstyle info.
             h1 + div[class] {
