chat: add transition to reply hover animation

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1928,6 +1928,7 @@
             /// Replies.
             ._1iJeo {
                 c: 0 0 bg;
+                transition: opacity 0.2s ease i;
                 &:hover { opacity: 0.8 }
             }
             /// Feat -> Align left bubble.
