chat: fix grouped media for fb-like msg tails

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1751,6 +1751,14 @@
                 &:not(#z) ._26fC0:not(#z) { rad: _o i }
                 /// Reply/media context menu.
                 ._20EE3 { top: 4px i }
+                /// Grouped media.
+                &:not(#z) ._2kztM:not(#z) {
+                    padding: 5px i;
+                    ._2F4Rh {
+                        padding: 0 i;
+                        .gDOmN, ../ ._1opHa:not(#z) { rad: _m i }
+                    }
+                }
             }
             &-in {
                 /// First message.
