chat: fix video timestamps in grouped media msg

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1880,6 +1880,15 @@
                     rad: 7.5px;
                     c: fg 0 bg;
                 }
+                /// Video timestamps.
+                + ._2G09-:not(#z) {
+                    span { c: cm }
+                    /// Grouped media. @upstream
+                    /._2kztM ._2G09- {
+                        right: 5px i;
+                        bottom: 3px i;
+                    }
+                }
                 + div > [role = 'button'] {
                     padding: 2px 5px;
                     rad: 7.5px;
