icons: fix colors for audio msg controls

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -2188,9 +2188,8 @@
             }
         }
         /// Audio message controls.
-        [data-icon = 'ptt'] path { fill-opacity: 0.55 }
-        [fill = '#09D261'] { v: green }
-        [fill = '#E53935'] { v: red }
+        ._2mjJG path { v: green }
+        ._2Fi6F path { v: red }
         /// Emoji/gif/sticker menu.
         ._1vDUw {
             c: 0 bd;
