chat: fix all big emojis for fb-like message tails

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1645,12 +1645,12 @@
             /// Emojis -> Big emoji wrapper.
             if(emoji_b && chat_m_t == 'fb-like') {
                 ._2x9bY {
-                    margin: 0 0 0 -8px i;
+                    margin: 0 i;
                     padding-top: 2px i;
-                    /// Emoji.
-                    .QkfD1 {
+                    /// 1/2/3 emojis.
+                    .QkfD1, ._2mqMv, ._2XGp- {
                         &._1D2ku, &._2DV1k {
-                            width: 24px i;
+                            width: 20px i;
                             height: @width;
                         }
                     }
