icons: add warning color to 'block contact' icon

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1039,6 +1039,10 @@
             &[data-icon *= '-dblcheck']:not(#z) path { v: ac }
         }
         &[data-icon *= 'check'] path { fill-opacity: 1 i }
+        /// Block.
+        /._14VS3 [data-icon = 'settings-blocked'] {
+            path { v: yellow }
+        }
         /// Exit/Delete/Report.
         &[data-icon = 'exit'],
         &[data-icon = 'delete'],
