landing: hardcode QR code's border to be white

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -368,8 +368,8 @@
                 div[data-ref] {
                     rad: 0;
                     filter: contrast(150%);
-                    outline: 4px solid white;
-                    box-shadow: 0 0 0 4px white;
+                    outline: 4px solid #fff;
+                    box-shadow: 0 0 0 4px #fff;
                     [role='button'] { c: white 0 ac }
                     /// Change white border when inactive.
                     &._1-KGg {
