icons: fix opacity for deleted message icon

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -989,6 +989,7 @@
                 > svg > path { fill-opacity: 0.30 i }
             }
             &[data-icon='msg-time'],        // sent message
+            &[data-icon='recalled'],        // deleted message
             &[data-icon='forwarded'] {      // forwarded message
                 > svg > path { fill-opacity: 0.55 i }
             }
