feat: refactor custom intro image into a variable
It's totally unnecessary to do this; hooray for 80 characters limit!

Related to #156.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -281,6 +281,30 @@
         svg_ac = to_svg(accent);
     }
 
+    /// Custom intro image.
+    :root {
+        _1  = "data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  ";
+        _1 += "height='256' width='256'><g stroke='";
+        _2  = "'><path d='M128.4901 30.8659a95.4375 95.4375 0 00-95.4375 95.4375";
+        _2 += " 95.4375 95.4375 0 0014.168 50.0332L35.6698 221.276l44.7989-12.49";
+        _2 += "8a95.4375 95.4375 0 0048.0214 12.9629 95.4375 95.4375 0 0095.4375";
+        _2 += "-95.4375 95.4375 95.4375 0 00-95.4375-95.4375z' fill='";
+        _3  = "' fill-rule='evenodd' stroke-width='18' stroke-linecap='square'/>";
+        _3 += "<path d='M97.8104 79.8463c-4.9671.0406-13.5028 2.0796-17.7812 14.";
+        _3 += "8946-6.8318 20.4631 12.5737 43.3028 27.2438 57.4735 14.7975 14.29";
+        _3 += "38 43.1559 26.507 58.0098 21.08 20.5566-8.9065 15.2475-22.9479 15";
+        _3 += ".2475-22.9479l-22.9727-11.0878s-2.062-1.206-3.4146.5737c-1.0042 1";
+        _3 += ".3213-9.4409 11.3755-9.4409 11.3755s-1.449 1.668-3.827.7402c-5.75";
+        _3 += "74-2.2462-14.2018-7.4856-18.5314-10.7795-6.8875-5.2399-12.957-13.";
+        _3 += "0846-16.9473-19.668-1.2556-2.5597.6953-4.709.6953-4.709s6.0303-8.";
+        _3 += "2629 7.0176-9.5566c1.0068-1.3194.2539-3.3633.2539-3.3633l-10.539-";
+        _3 += "23.2285s-2.0334-.8212-5.0138-.7969z' fill='";
+        _4  = "' stroke-linejoin='round'/></g></svg>";
+        _i = s('url("%s%s%s%s%s%s%s")', unquote(_1), svg_ac, unquote(_2), svg_bg,
+                                        unquote(_3), svg_ac, unquote(_4));
+        --intro-image: _i;
+    }
+
     /// Typing indicator animation.
     @keyframes pulse {
         40% { opacity: 0 }
@@ -427,8 +451,7 @@
                 max-width: 200px;
                 max-height: 200px;
                 transition: opacity 0.6s ease;
-                img = s("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' height='256' width='256'><g stroke='%s'><path d='M128.4901 30.8659a95.4375 95.4375 0 00-95.4375 95.4375 95.4375 95.4375 0 0014.168 50.0332L35.6698 221.276l44.7989-12.498a95.4375 95.4375 0 0048.0214 12.9629 95.4375 95.4375 0 0095.4375-95.4375 95.4375 95.4375 0 00-95.4375-95.4375z' fill='%s' fill-rule='evenodd' stroke-width='18' stroke-linecap='square'/><path d='M97.8104 79.8463c-4.9671.0406-13.5028 2.0796-17.7812 14.8946-6.8318 20.4631 12.5737 43.3028 27.2438 57.4735 14.7975 14.2938 43.1559 26.507 58.0098 21.08 20.5566-8.9065 15.2475-22.9479 15.2475-22.9479l-22.9727-11.0878s-2.062-1.206-3.4146.5737c-1.0042 1.3213-9.4409 11.3755-9.4409 11.3755s-1.449 1.668-3.827.7402c-5.7574-2.2462-14.2018-7.4856-18.5314-10.7795-6.8875-5.2399-12.957-13.0846-16.9473-19.668-1.2556-2.5597.6953-4.709.6953-4.709s6.0303-8.2629 7.0176-9.5566c1.0068-1.3194.2539-3.3633.2539-3.3633l-10.539-23.2285s-2.0334-.8212-5.0138-.7969z' fill='%s' stroke-linejoin='round'/></g></svg>", svg_ac, svg_bg, svg_ac);
-                background-image: url(img) i;
+                background-image: var(--intro-image) i;
             }
             /// Userstyle info.
             h1 + div[class] {
