feat: reimplement custom intro image

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -136,6 +136,11 @@ to_rgb(input) {
     unquote(slice(s('%s', rgba(input, 0)), 5, -3))
 }
 
+// Convert to SVG-friendly colors.
+to_svg(input) {
+    s('\%23%s', unquote(substr(s('%s', input), 1, 6)));
+}
+
 i  = !important
 _d = darken
 _l = lighten
@@ -674,11 +679,43 @@ define('ac' + key, val) for key, val in ac
         * { scrollbar-width: thin i }
     }
 
+    /// Custom intro image.
+    svg_bg = to_svg(bg-3)
+    svg_ac = to_svg(ac-0)
+    :root {
+        _1  = "data:image/svg+xmlutf8,<svg xmlns='http://www.w3.org/2000/svg'  "
+        _1 += "height='256' width='256'><g stroke='"
+        _2  = "'><path d='M128.4901 30.8659a95.4375 95.4375 0 00-95.4375 95.4375"
+        _2 += " 95.4375 95.4375 0 0014.168 50.0332L35.6698 221.276l44.7989-12.49"
+        _2 += "8a95.4375 95.4375 0 0048.0214 12.9629 95.4375 95.4375 0 0095.4375"
+        _2 += "-95.4375 95.4375 95.4375 0 00-95.4375-95.4375z' fill='"
+        _3  = "' fill-rule='evenodd' stroke-width='18' stroke-linecap='square'/>"
+        _3 += "<path d='M97.8104 79.8463c-4.9671.0406-13.5028 2.0796-17.7812 14."
+        _3 += "8946-6.8318 20.4631 12.5737 43.3028 27.2438 57.4735 14.7975 14.29"
+        _3 += "38 43.1559 26.507 58.0098 21.08 20.5566-8.9065 15.2475-22.9479 15"
+        _3 += ".2475-22.9479l-22.9727-11.0878s-2.062-1.206-3.4146.5737c-1.0042 1"
+        _3 += ".3213-9.4409 11.3755-9.4409 11.3755s-1.449 1.668-3.827.7402c-5.75"
+        _3 += "74-2.2462-14.2018-7.4856-18.5314-10.7795-6.8875-5.2399-12.957-13."
+        _3 += "0846-16.9473-19.668-1.2556-2.5597.6953-4.709.6953-4.709s6.0303-8."
+        _3 += "2629 7.0176-9.5566c1.0068-1.3194.2539-3.3633.2539-3.3633l-10.539-"
+        _3 += "23.2285s-2.0334-.8212-5.0138-.7969z' fill='"
+        _4  = "' stroke-linejoin='round'/></g></svg>"
+        _i = s('url("%s%s%s%s%s%s%s")', unquote(_1), svg_ac, unquote(_2), svg_bg,
+                                        unquote(_3), svg_ac, unquote(_4))
+        --intro-image: _i
+    }
+
     body {
         background-image: none i;
         c: var(--fg-0) 0 var(--bg-0);
         /// Intro image.
-        [data-asset-intro-image-light] { filter: opacity(0.5) i }
+        [data-asset-intro-image-light] {
+            max-width: 200px
+            max-height: @max-width
+            background-image: var(--intro-image) i
+            transition: opacity 0.6s ease;
+            border-radius: 0 i
+        }
         /// Chat image.
         [data-asset-chat-background-light] { filter: invert(1) i }
     }
